<resources>
    <string name="app_name">Mensch ärgere Dich nicht!</string>
    <string name="TXTneues_SpielBTN">Neues Spiel</string>
    <string name="TXTspielregelnBTN">Spielregeln</string>
    <string name="TXTeinstellungenBTN">Einstellungen</string>
    <string name="TXTspielaufruf">Gib den Ton an und Starte ein neues Spiel!</string>
    <string name="TXTlable">Mensch ärgere Dich nicht!</string>
    <string name="TXTtitelMitspielerwahl">Wähle deine Mitspieler</string>
    <string name="joinedPlayers">Beigetreten:</string>
    <string name="TXTspielerauswahl">gewählt: 0/3</string>
    <string name="TXTspielstartenBTN">STARTEN</string>
    <string name="TXTinfoBTN">info</string>
    <string name="TXTnameneingabe">Spielername</string>
    <string name="TXTgoBTN">go</string>
    <string name="TXTspieler1">name1</string>
    <string name="TXTspieler2">name2</string>
    <string name="TXTspieler3">name3</string>
    <string name="TXTspieler4">name4</string>
    <string name="TXTspielzug">name1 ist dran</string>
    <string name="TXTeinstellungen">Einstellungen</string>
    <string name="TXTton">Ton</string>
    <string name="TXTschummelfunkAn">Schummelfunktion</string>
    <string name="TXTdesign">Design</string>
    <string name="TXTdesign1">Vintage</string>
    <string name="TXTdesign2">Classic</string>
    <string name="TXTspeichern">Speichern</string>
    <string name="msgEnterUsername">Bitte gib einen Spielernamen an</string>
    <string name="strJoinGame">Spiel Beitreten</string>
    <string name="service_id">com.vintagetechnologies.menschaergeredichnicht</string>
    <string name="strJoinTitle">Wähle ein Spiel aus</string>
    <string name="msgSearchingGameHost">Nach Spielen suchen...</string>
    <string name="msgHostSearchFailed">"Suche fehlgeschlagen"</string>
    <string name="waitingForGameStart">Warte auf Spielanfang...</string>
    <string name="msgConfirmExit">"Möchtest du das Spiel wirklich beenden?"</string>
    <string name="msgConfirmExitClient">"Möchtest du die Host-Suche wirklich beenden?"</string>
    <string name="msgConfirmExitHost">"Möchtest du die Mitspielersuche wirklich beenden?"</string>
    <string name="hostEndedGame">Der Host hat das Spiel beendet.</string>
    <string name="strSelectGameFromList">Gefundene Spiele:</string>
    <string name="joinedGame">Spiel von %s beigetreten!</string>
    <string name="msgPlayerJustJoinedTheGame">\u0020ist beigetreten!</string>
    <string name="msgPlayerJustLeftTheGame">\u0020hat das Spiel verlassen</string>
    <string name="noWiFiConnection">Bitte stellen Sie vorher eine WiFi Verbindung her!</string>
    <string name="schummelnEin">Schummeln ist eingeschalten</string>
    <string name="schummelnAus">Schummeln ist ausgeschalten</string>

</resources>
