<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vintagetechnologies.menschaergeredichnicht.Einstellungen">

    <TextView
        android:id="@+id/textView_einstellungen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/TXTeinstellungen"
        android:textSize="24sp"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:id="@+id/cbMusic"
        android:layout_width="131dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="41dp"
        android:checked="true"
        android:text="@string/TXTton"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView_design"
        app:layout_constraintTop_toBottomOf="@+id/textView_einstellungen"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:id="@+id/cbCheating"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginLeft="-12dp"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:text="@string/TXTschummelfunkAn"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/cbMusic"
        app:layout_constraintTop_toBottomOf="@+id/cbMusic"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXTdesign"
        android:textSize="17sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/cbCheating"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_design"
        app:layout_constraintHorizontal_bias="0.204">

        <RadioButton
            android:id="@+id/radioBtnDesignClassic"
            android:layout_width="123dp"
            android:layout_height="29dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/TXTdesign2"
            app:layout_constraintLeft_toLeftOf="@+id/radioBtnDesignVintage"
            app:layout_constraintTop_toBottomOf="@+id/radioBtnDesignVintage"
            tools:ignore="RtlHardcoded" />

        <RadioButton
            android:id="@+id/radioBtnDesignVintage"
            android:layout_width="122dp"
            android:layout_height="34dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/TXTdesign1"
            app:layout_constraintLeft_toLeftOf="@+id/textView_design"
            app:layout_constraintTop_toBottomOf="@+id/textView_design"
            tools:ignore="RtlHardcoded" />

    </RadioGroup>

    <Button
        android:id="@+id/BTN_speichern"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:text="@string/TXTspeichern"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
