<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_Layout"
    tools:context="com.vintagetechnologies.menschaergeredichnicht.Hauptmenue">

    <ImageButton
        android:id="@+id/imageButton_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/TXTinfoBTN"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/btnShowRules"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/TXTspielregelnBTN"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOpenSettings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnOpenSettings"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/TXTeinstellungenBTN"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnHostGame"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/TXTneues_SpielBTN"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNewGame" />

    <TextView
        android:id="@+id/lblNewGame"
        android:layout_width="327dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/TXTspielaufruf"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_lable"/>

    <TextView
        android:id="@+id/textView_lable"
        android:layout_width="235dp"
        android:layout_height="76dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/TXTlable"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        app:layout_constraintHorizontal_bias="0.476"/>

    <Button
        android:id="@+id/btnJoinGame"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/strJoinGame"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLocalMultiplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHostGame"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/btnLocalMultiplayer"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:text="Lokaler Multiplayer"
        android:textSize="10sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="241dp"/>

    <Button
        android:id="@+id/btnShowManual"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Anleitung"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowRules"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocalMultiplayer"
        app:layout_constraintVertical_bias="1.0"/>


</android.support.constraint.ConstraintLayout>
