<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vintagetechnologies.menschaergeredichnicht.GameHost">

    <TextView
        android:id="@+id/textView_mitspieler_titel"
        android:layout_width="222dp"
        android:layout_height="83dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/TXTtitelMitspielerwahl"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        tools:ignore="RtlHardcoded" />

    <ListView
        android:id="@+id/listViewPlayers"
        android:layout_width="263dp"
        android:layout_height="212dp"
        android:background="?attr/colorButtonNormal"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strStatus"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/listViewPlayers"
        app:layout_constraintLeft_toLeftOf="@+id/listViewPlayers" />

    <TextView
        android:id="@+id/lblSelectedPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXTspielerauswahl"
        app:layout_constraintBottom_toTopOf="@+id/listViewPlayers"
        app:layout_constraintRight_toRightOf="@+id/listViewPlayers" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:text="@string/TXTspielstartenBTN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewPlayers" />

    <ImageButton
        android:id="@+id/btnShowInfo"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/TXTinfoBTN"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
