<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_Layout"
    tools:context="com.vintagetechnologies.menschaergeredichnicht.MainActivity">

    <TextView
        android:id="@+id/TextView_titel"
        android:layout_width="264dp"
        android:layout_height="189dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/TXTlable"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/TXTnameneingabe"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/TextView_titel"
        app:layout_constraintTop_toBottomOf="@+id/TextView_titel"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnOpenMainMenue"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/TXTgoBTN"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtName"
        app:layout_constraintLeft_toRightOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="@+id/txtName"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
